# sample_order_repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/shopkit/: __init__.py  analytics.py  checkout.py  cli.py  discounts.py  inventory.py  models.py  reports.py  seed.py  shipping.py  tax.py  utils.py
tests/: test_models.py  test_reports.py  test_smoke.py
